--- a/ssi/right-menu-droite-eng.html
+++ b/ssi/right-menu-droite-eng.html
@@ -18,7 +18,7 @@
 
     <ul>
       <li><a title="EGD: 30 Tonne Cranes" href="env/cranes-grues-eng.html">30 Tonne Cranes</a></li>
-      <li><a title="EGD: Rates" href="env/tarifs-rates-eng.html">Scheduled changes to the Esquimalt Graving Dock rates</a></li>
+      <li><a title="EGD: Rates" href="env/tarifs-rates-eng.html">Effective tariff of dock charges for the Esquimalt Graving Dock</a></li>
       <li><a title="EGD: Capital Projects" href="env/projects-projets-eng.html">Upcoming capital projects impacting operations for the Esquimalt Graving Dock</a></li>
       <li><a title="EGD Regulations" href="http://gazette.gc.ca/rp-pr/p2/2009/2009-12-23/html/sor-dors324-eng.html">Regulations amending the Esquimalt Graving Dock regulations.</a></li>
     </ul>
