reword contact info (refs #4607)

--- a/env/tarifs-rates-eng.html
+++ b/env/tarifs-rates-eng.html
@@ -96,6 +96,7 @@
 				<p>The tariff proposal was  reviewed by the House Standing Committee on Government Operations and Estimates  on May 28, 2009 and by the Senate Standing Committee on Transportation and  Communication on June 9, 2009. All of the requirements and provisions of the <em>User  Fees Act </em>have now been met.</p>
 				<p>The department has now implemented the proposed tariff changes effective April 1, 2010.</p>
 				<p>The new rates are consistent with  previous notices given to users in 2007 and in 2008.</p>
+				<p>If you have questions or concerns, please contact the <a href="mailto:jim.milne@pwgsc-tpsgc.gc.ca">Director of the Esquimalt Graving Dock</a> at 250-363-3256</p>
 			</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
