new services page content, moved stabilizer pockets blurb to 'about the dock' (refs #4607)

--- a/dimensions-eng.html
+++ b/dimensions-eng.html
@@ -106,6 +106,12 @@
 					walls bordering the east end. The Dock is lit by eight high-mast towers
 					with high pressure sodium lighting fixtures plus standard mercury vapour
 					lighting. </p>
+				<img src="images/stabil.jpg" width="320" height="234" alt="Stabilizer pocket" style="float: right; padding-left: 15px;" />
+				<p>Recently, stabilizer pockets were built into the concrete walls of the
+					drydock. This new feature enables cruise ships to extend their stabilizers
+					for inspection, maintenance and repair while in drydock.</p>
+        <br style="clear: both" />
+        <br />
 				<div class="option4">
 				<h2>Dock Dimensions</h2>
 				<a href="images/dimensions.gif"><img src="images/dimensions-2.gif" alt="Plan View and Logitudinal Section of Esquimalt Graving Dock with various dimensions" width="450" height="282" /></a>
