removing things from the history page (refs #4607)

--- a/historique-history-eng.html
+++ b/historique-history-eng.html
@@ -104,11 +104,6 @@
 					it was sheltered from wind and was situated on a solid rock basin - ideal
 					for a drydock. The dock took six years to build and was the second largest
 					in the world. </p>
-				<p> The Esquimalt Graving Dock officially opened on July 1, 1927 and the
-					ceremony was part of Canada's Diamond Jubilee celebrations. This year, the
-					Dock commemorated its 75th anniversary with a rededication ceremony attended
-					by The Honourable David Anderson, former Minister of Environment and His
-					Worship, Mayor Ray Rice of Esquimalt. </p>
 				<div class="smallFont" style="text-align: center; font-weight:bold;"><img src="images/ceremon.jpg" alt="Time Capsule dedicated" width="425" height="319" />
 					<br />The Honourable David Anderson, former Minister of Environment with His
 						Worship, Mayor Ray Rice of Esquimalt and Jack Gale of the Esquimalt Graving
@@ -116,10 +111,7 @@
 				<h2>Articles</h2>
 				<p>by Leah Prentice</p>
 				<ul>
-					<li><a href="his/article-eng.html">QE II Article</a>&nbsp;&nbsp;(June
-						2002)</li>
-					<li><a href="his/ensemble-eng.html"><acronym title="Esquimalt Graving Dock">EGD</acronym> <i>Ensemble</i> Article</a>&nbsp;&nbsp;(August
-						2002)</li>
+					<li><a href="his/article-eng.html">QE II Article</a>&nbsp;&nbsp;(June 2002)</li>
 				</ul>
 				<h2>Photographs</h2>
 				<p>Select a year:</p>
