minor changes to wording on homepage (refs #4607)

--- a/index-eng.html
+++ b/index-eng.html
@@ -132,9 +132,8 @@
 							the British Columbia Ferry Corporation.</li>
 					</ul>
 					<p>Our ISO 14001
-							environmental management system ensures that work done at the Dock
-							is done in an environmentally responsible manner. We are one of only three
-							multi-user ship repair facilities in the world with this special designation.<br />
+							environmental management system ensures that work done at the Esquimalt Graving Dock
+							is done in an environmentally responsible manner.<br />
 			</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
