cleaning up environment pages (refs #4607)

--- a/env/politique-policy-eng.html
+++ b/env/politique-policy-eng.html
@@ -88,44 +88,43 @@
 
 			<div class="center">
 
-				<h1 id="cont">
-					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					<img src="../images/env_policy_banner.jpg" alt="" width="476" height="133" />
-					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-					</h1>
+				<h1 id="cont">Environmental Policy Statement</h1>
 			
-				<div class="option2">
-					<p><strong>It is the goal of the Esquimalt Graving Dock, it partnership
-							with the ship repair industry, to be the premier
-							ship repair, construction and maintenance facility
-							on the west coast of North America.</strong></p>
-					<p><strong>the Esquimalt Graving Dock and its Users realize that environmental
-							management is an integral part of attaining that
-							goal. Through the implementation of an <acronym title="International Standards Organization">ISO</acronym> 14001
-							Environmental management System, we are committed
-							to managing the actual and potential environmental
-							impacts of our operations. </strong></p>
-				</div>
+					<p>
+            It is the goal of the Esquimalt Graving Dock, in partnership
+						with the ship repair industry, to be the premier
+						ship repair, construction and maintenance facility
+						on the west coast of North America.
+          </p>
+          
+					<p>
+            The Esquimalt Graving Dock and its Users realize that environmental
+						management is an integral part of attaining that
+						goal. Through the implementation of an <acronym title="International Standards Organization">ISO</acronym> 14001
+						Environmental management System, we are committed
+						to managing the actual and potential environmental
+						impacts of our operations.
+          </p>
+
 				<p>To meet our commitment we will: </p>
 				<ul>
-					<li>Protects the natural environment and prevent pollution.</li>
+					<li>Protect the natural environment and prevent pollution.</li>
 					<li>Meet or exceed applicable federal, provincial and municipal legislation
 						and regulations; uphold departmental policies; and abide
 						by industry standards, practices and other requirements
 						related to our identified environmental aspects.</li>
 					<li>Establish and review our programs, objectives and targets to ensure
 						we are meeting our environmental commitments.</li>
-					<li>Communicate openly with our employees, Users, tenants, contractors, suppliers,
+					<li>Communicate openly with our employees, users, tenants, contractors, suppliers,
 						neighbours and other stakeholders regarding our Environmental
 						Management System and the nature of our operations.</li>
-					<li>Educate our employees and the Users of our facility to ensure they are
+					<li>Educate our employees and the users of our facility to ensure they are
 						aware of and understand their roles and responsibilities
 						in protecting the environment.</li>
 					<li>Meet the evolving needs and expectations of our industry and community
 						through the continual improvement of our systems, programs
 						and procedures.    </li>
 				</ul>
-				<img src="../images/poli-sig-eng.jpg" alt="Signatures: Regional Director General, PWGSC Pacific Region; General Manager, PWGSC EGD; Operations Coordinator, PWGSC ECG" width="494" height="138" />
 		  </div>
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
 			<!-- TWO COLUMN LAYOUT ENDS | FIN DE LA MISE EN PAGE DE DEUX COLONNES -->
