--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -97,7 +97,7 @@
 				ship repair, construction and maintenance facility on the west coast of North
 				America.</p>
 			<img src="../images/croisiere-cruise.jpg" alt="Cruise ship in dock" width="250" height="212" style="float: right;" />The
-				Esquimalt Graving Dock and its Users recognize that responsible environmental
+				Esquimalt Graving Dock and its users recognize that responsible environmental
 				management is an integral part of attaining that goal. In order to ensure
 				business at the facility is conducted in an environmentally responsible manner,
 				the <acronym title="Esquimalt Graving Dock">EGD</acronym> has implemented
@@ -126,7 +126,7 @@
 			<p>The Esquimalt Graving Dock's commitment to environmental protection is
 				outlined in the <acronym title="Esquimalt Graving Dock">
 				EGD</acronym> <a href="politique-policy-eng.html">Environmental Policy</a>.			</p>
-			<ul style="list-style-type:none; padding-left:0; margin-left:0; font-size:90%">
+			<ul style="list-style-type:none; padding-left:0; margin-left:0;">
 				<li><a href="gestion-management-eng.html">Environmental Management</a>
 					<ul style="list-style-type:none">
 		
