fix image padding

--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -96,7 +96,7 @@
 				Graving Dock, in partnership with the ship repair industry, to be the premier
 				ship repair, construction and maintenance facility on the west coast of North
 				America.</p>
-			<img src="../images/croisiere-cruise.jpg" alt="Cruise ship in dock" width="250" height="212" style="float: right;" />The
+			<img src="../images/croisiere-cruise.jpg" alt="Cruise ship in dock" width="250" height="212" style="float: right; padding-left: 10px;" />The
 				Esquimalt Graving Dock and its users recognize that responsible environmental
 				management is an integral part of attaining that goal. In order to ensure
 				business at the facility is conducted in an environmentally responsible manner,
