--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -138,13 +138,13 @@
 						</li>
 					</ul>
 				</li>
-		  </ul>
 				<li><a href="interet-interest-eng.html">Articles of Interest</a></li>
+		  </ul>
 			<p>If you have any questions or concerns regarding
 				the Environmental Policy or the environmental programs at the Esquimalt Graving
 				Dock, please contact the Environmental Coordinator at:</p>
 		  <p>
-				Email: <a href="mailto:Melissa.Piasta@pwgsc.gc.ca">Melissa.Piasta@pwgsc.gc.ca</a><br />
+				Email: <a href="mailto:melissa.piasta@pwgsc-tpsgc.gc.ca">melissa.piasta@pwgsc-tpsgc.gc.ca</a><br />
 		  </p>
 
 		</div>
