Add a What's New section

--- a/ssi/right-menu-droite-fra.html
+++ b/ssi/right-menu-droite-fra.html
@@ -5,6 +5,12 @@
 		<ul>
 			<li>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> est une des rares installations de réparation de grands bâtiments au monde à avoir adopté la norme <acronym title="Organisation internationale de normailisation">ISO</acronym> 14001.  <a title="EGD: Leading the Way with ISO 14001" href="/pac/cse-egd/env/voie-way-fra.html">Détails &gt; </a></li>
 		</ul>
+		<br />
+		<h2>Quoi de neuf...</h2>
+		<ul>
+			<li><a title="CSE: Capital Projects" href="http://www.tpsgc-pwgsc.gc.ca/pac/cse-egd/env/projects-projets-fra.html">Futurs projets d'investissement impact sur les opérations de la cale sèche d'Esquimalt.  </a></li>
+			<li><a title="CSE Reglement" href="http://gazette.gc.ca/rp-pr/p2/2009/2009-12-23/html/sor-dors324-fra.html">Règlement modifiant le Règlement de 1989 sur la cale sèche d¿Esquimalt.</a></li>
+		</ul>
 	</li>
 </ul>
 <!-- <a href="http://www.iso.org/iso/fr/iso_catalogue/catalogue_tc/catalogue_detail.htm?csnumber=31807"><img src="/pac/cse-egd/images/ISO14001.gif" width="195" height="68" alt="ISO 14001" title="ISO 14001" /></a> -->
