--- a/ssi/right-menu-droite-eng.html
+++ b/ssi/right-menu-droite-eng.html
@@ -3,15 +3,20 @@
 	<li>
 		<h2>Did you know?</h2>
 		<ul>
-			<li><acronym title="Esquimalt Graving Dock">EGD</acronym> is one of the few large ship repair facilities in the world who has implemented
-				<acronym title="International Organization for Standardization">ISO</acronym> 14001.  <a title="EGD: Leading the Way with ISO 14001" href="/pac/cse-egd/env/voie-way-eng.html">More &gt; </a></li>
+			<li>
+        <acronym title="Esquimalt Graving Dock">EGD</acronym> is one of the few large ship repair facilities in the world who has implemented
+				<acronym title="International Organization for Standardization">ISO</acronym> 14001.  <a title="EGD: Leading the Way with ISO 14001" href="/pac/cse-egd/env/voie-way-eng.html">More &gt; </a>
+      </li>
 		</ul>
   </li>
   <li>
     <h2>What's New</h2>
     <ul>
-      <li><a title="EGD: Capital Projects" href="http://www.tpsgc-pwgsc.gc.ca/pac/cse-egd/env/projects-projets-eng.html">Upcoming capital projects impacting operations for the Esquimalt Graving Dock</a></li>
-      <li><a title="EGD Regulations" href="http://gazette.gc.ca/rp-pr/p2/2009/2009-12-23/html/sor-dors324-eng.html">Regulations amending the Esquimalt Graving Dock regulations.</a>
+      <li>
+        <a title="EGD: Capital Projects" href="http://www.tpsgc-pwgsc.gc.ca/pac/cse-egd/env/projects-projets-eng.html">Upcoming capital projects impacting operations for the Esquimalt Graving Dock</a>
+      </li>
+      <li>
+        <a title="EGD Regulations" href="http://gazette.gc.ca/rp-pr/p2/2009/2009-12-23/html/sor-dors324-eng.html">Regulations amending the Esquimalt Graving Dock regulations.</a>
       </li>
     </ul>
   </li>
