--- a/cn-cu-eng.html
+++ b/cn-cu-eng.html
@@ -107,8 +107,7 @@
 				<h2>Form</h2>
 				<p>If you would like an electronic response, please include your e-mail address. <br />
 					<strong>Please note:</strong> All personal information collected on this
-					form is protected under the <a href="http://laws.justice.gc.ca/en/P-21/index.html">Privacy
-					Act</a>.</p>
+					form is protected under the <a href="http://laws.justice.gc.ca/en/P-21/">Privacy Act</a>.</p>
 				<form method="post" action="/cgi-bin/generic_email.pl" id="clfcontactform">
 				   <p>
 					<!-- une adresse qui commence avec http:// est requise pour afficher la page de confirmation -->
@@ -191,8 +190,7 @@
 					Works and Government Services Canada's Personal Information Bank number
 					PPU 115 Internet and PPE 830 Intranet Services, and it will be retained
 					according to the retention and disposal schedule established for this bank.</p>
-				<p>Your personal information is protected under the provisions of the <a href="http://laws.justice.gc.ca/en/P-21/"><em>Privacy
-							Act</em></a>. Under the Act, you have the right to request access to and
+				<p>Your personal information is protected under the provisions of the <a href="http://laws.justice.gc.ca/en/P-21/"><em>Privacy Act</em></a>. Under the Act, you have the right to request access to and
 							correction of your personal information, if erroneous or incomplete. If
 							you wish to avail yourself of this right or require clarification about
 							this Statement, contact our Privacy Coordinator at <a href="mailto:ncr.atip@pwgsc.gc.ca">ncr.atip@pwgsc.gc.ca</a>.
