Provide link titles for website links

--- a/entreprises-firms-eng.html
+++ b/entreprises-firms-eng.html
@@ -158,7 +158,7 @@
 
 
 					<dt>Website:</dt>
-					<dd><a href="http://www.interconmarine.com">http://www.interconmarine.com</a> <i>(this
+					<dd><a href="http://www.interconmarine.com" title="Intercon Marine Website">http://www.interconmarine.com</a> <i>(this
 							site available in English only)</i></dd>
 
 
@@ -293,7 +293,7 @@
 
 
 					<dt>Website:</dt>
-					<dd><a href="http://www.vicship.com">http://www.vicship.com</a> <i>(this
+					<dd><a href="http://www.vicship.com" title="Victoria Shipyard Website">http://www.vicship.com</a> <i>(this
 							site available in English only)</i> </dd>
 
 
