--- a/entreprises-firms-fra.html
+++ b/entreprises-firms-fra.html
@@ -157,7 +157,7 @@
 
 
 					<dt>Site Web&nbsp;:</dt>
-					<dd><a href="http://www.interconmarine.com">http://www.interconmarine.com</a> <i>(site en anglais seulement)</i></dd>
+					<dd><a href="http://www.interconmarine.com" title="Site Web du Intercon Marine">http://www.interconmarine.com</a> <i>(site en anglais seulement)</i></dd>
 
 
 					<dt>Courriel&nbsp;:</dt>
@@ -297,7 +297,7 @@
 
 
 					<dt>Site Web&nbsp;:</dt>
-					<dd><a href="http://www.vicship.com">http://www.vicship.com</a> <i>(site en anglais seulement)</i> </dd>
+					<dd><a href="http://www.vicship.com" title="Site Web du Victoria Shipyards">http://www.vicship.com</a> <i>(site en anglais seulement)</i> </dd>
 
 
 					<dt>Courriel&nbsp;:</dt>
