Get rid of unused environmental practices page

--- a/env/gestion-management-eng.html
+++ b/env/gestion-management-eng.html
@@ -111,6 +111,7 @@
 						and materials handling.</p>
 					<div style="text-align: center;"><img src="../images/barils-bache-drums-tarp.jpg" title="EBMP: (left) Drums for wastewater transfer; (right) Tarps for paint handling" alt="EBMP: (left) Drums for wastewater transfer; (right) Tarps for paint handling" width="402" height="131" /></div>
 				
+          <div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />Top of Page</a> </div>
 				</div>
 				<br />
 				<div style="float: left; clear: right;">
@@ -123,6 +124,7 @@
 					<p><acronym title="Esquimalt Graving Dock">EGD</acronym> staff must also
 						be knowledgeable of the Environmental Best Management Practices (<acronym title="Environmental Best Management Practices">EBMP</acronym>)
 						relating to their work.</p>
+          <div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />Top of Page</a> </div>
 				</div>
 				<br />
 				<div  style="float: right; clear:right;">
@@ -133,6 +135,7 @@
 						in outreach and educational events such as educational site tours, the
 						annual Greater Victoria Bike to Work Week and the <acronym title="Public Works and Government Services Canada">PWGSC</acronym> Green Citizen Passport
 						Programs.</p>
+          <div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />Top of Page</a> </div>
 				</div>
 				<br />
 				<div style="clear:right;">
@@ -142,6 +145,7 @@
 						for review under the Canadian Environmental Assessment Act (<acronym title="Canadian Environmental Assessment Act">CEAA</acronym>).
 						If an assessment is required, an action plan is created to manage any potential
 						environmental impacts.</p>
+          <div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />Top of Page</a> </div>
 				</div>
 			</div>
 
