--- a/site-fra.html
+++ b/site-fra.html
@@ -107,12 +107,7 @@
 
 						<ul>
 							<li> <a href="env/politique-policy-fra.html">Politique environnementale</a></li>
-							<li><a href="env/gestion-management-fra.html">Gestion</a>
-								<ul>
-									<li><a href="env/mpge-ebmp-fra.html">12 R&egrave;gles environnementales &agrave; respecter &agrave; la
-									Cale s&egrave;che d&rsquo;Esquimalt</a></li>
-								</ul>
-							</li>
+							<li><a href="env/gestion-management-fra.html">Gestion</a></li>
 							<li><a href="env/initiatives-fra.html">Initiatives</a></li>
 							<li><a href="env/interet-interest-fra.html">Articles d'int&eacute;r&ecirc;t</a></li>
 						</ul>
