Add alt text for signatures image

--- a/env/politique-policy-eng.html
+++ b/env/politique-policy-eng.html
@@ -126,7 +126,7 @@
 						and procedures.    </li>
 				</ul>
 
-        <img src="../images/poli-sig-eng.jpg" />
+        <img src="../images/poli-sig-eng.jpg" alt="Signatures: Director General, Engineering Assets Strategy Sector; Director, Esquimalt Graving Dock; Operations Manager, Esquimalt Graving Dock" />
 		  </div>
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
 			<!-- TWO COLUMN LAYOUT ENDS | FIN DE LA MISE EN PAGE DE DEUX COLONNES -->
