Add link titles

--- a/victoria-eng.html
+++ b/victoria-eng.html
@@ -112,14 +112,14 @@
 
 				<h2><a name="victoria"></a>Visitor Information</h2>
 				<p>Tourism Victoria: <br />
-					<a href="http://www.tourismvictoria.com" >http://www.tourismvictoria.com</a></p>
+					<a href="http://www.tourismvictoria.com" title="Tourism Victoria">http://www.tourismvictoria.com</a></p>
 				<p><i>(the sites listed below are available in English only)</i></p>
 				<p>Victoria Conference Centre: <br />
-					<a href="http://www.victoriaconference.com" >http://www.victoriaconference.com</a></p>
+					<a href="http://www.victoriaconference.com" title="Victoria Conference Centre">http://www.victoriaconference.com</a></p>
 				<!-- <p>British Columbia Vacation and Business Travel Guide: <a href="http://www.vacationsbc.com/cityl%20.html" ><br />
 					http://www.vacationsbc.com/cityl .html</a></p> -->
-				<p>British Columbia BC Canada Tourism & Travel Guide: <br />
-					<a href="http://www.bc.worldweb.com" >http://www.bc.worldweb.com</a></p>
+				<p>British Columbia BC Canada Tourism &amp; Travel Guide: <br />
+					<a href="http://www.bc.worldweb.com" title="British Columbia BC Canada Tourism &amp; Travel Guide">http://www.bc.worldweb.com</a></p>
 				<p>Black Ball Transport: <br />
 					<a href="http://www.northolympic.com/coho/" >http://www.northolympic.com/coho</a></p>
 				<p>Clipper Navigation Ltd.: 250-382-8100</p>
@@ -127,32 +127,32 @@
 				<h2><strong>City Halls</strong></h2>
 				<p><i>(the sites in this section are available in English only)</i></p>
 				<p>Victoria:<br />
-					<a href="http://www.victoria.ca/cityhall/index.shtml" >http://www.victoria.ca/cityhall/index.shtml</a></p>
+					<a href="http://www.victoria.ca/cityhall/index.shtml" title="Victoria City Hall">http://www.victoria.ca/cityhall/index.shtml</a></p>
 				<p>Esquimalt: <br />
-					<a href="http://www.esquimalt.ca/municipalHall" >http://www.esquimalt.ca/municipalHall</a></p>
+					<a href="http://www.esquimalt.ca/municipalHall" title="Esquimalt Municipal Hall">http://www.esquimalt.ca/municipalHall</a></p>
 
 				<h2><a name="traversier-ferry" id="traversier-ferry"></a>Ferries</h2>
 				<p>B.C. Ferry Corporation:<br />
-					<a href="http://www.bcferries.com" >http://www.bcferries.com</a></p>
+					<a href="http://www.bcferries.com" title="B.C. Ferry Corporation">http://www.bcferries.com</a></p>
 				<p>Washington State Ferries:<br />
-					<a href="http://www.wsdot.wa.gov/ferries" >http://www.wsdot.wa.gov/ferries</a> <i>(this site is available in English only)</i></p>
+					<a href="http://www.wsdot.wa.gov/ferries" title="Washington State Ferries">http://www.wsdot.wa.gov/ferries</a> <i>(this site is available in English only)</i></p>
 
 				<h2><a name="avion-air" id="avion-air"></a>Air Service</h2>
 				<p>Air Canada: 250-360-9074<br />
-					<a href="http://www.aircanada.ca" >http://www.aircanada.ca</a></p>
+					<a href="http://www.aircanada.ca" title="Air Canada">http://www.aircanada.ca</a></p>
 				<p><i>(the sites listed below are available in English only)</i></p>
 				<p>Helijet Airways: 250-382-6222<br />
-					<a href="http://www.helijet.com" >http://www.helijet.com</a></p>
+					<a href="http://www.helijet.com" title="Helijet Airways">http://www.helijet.com</a></p>
 				<p>Alaska Airlines / Horizon Air: 1-800-547-9308 <br />
-					<a href="http://www.alaskaair.com/" >http://horizonair.alaskaair.com/</a></p>
+					<a href="http://www.alaskaair.com/" title="Alaska Airlines">http://horizonair.alaskaair.com/</a></p>
 				<p>Victoria Airport: <br />
-					<a href="http://www.victoriaairport.com" >http://www.victoriaairport.com</a></p>
+					<a href="http://www.victoriaairport.com" title="Victoria Airport">http://www.victoriaairport.com</a></p>
 				<p>Note: Victoria International Airport is situated near Sidney, some 27
 					kilometres north of Victoria</p>
 					
 				<h2> <a name="transit"></a>Local Transit Information </h2>
 				<p>BC Transit: <br />
-					<a href="http://www.bctransit.com" >http://www.bctransit.com</a> <i>(this
+					<a href="http://www.bctransit.com" title="BC Transit">http://www.bctransit.com</a> <i>(this
 					site is available in English only)</i></p>
 			</div>
 
