Fix link errors

--- a/entreprises-firms-eng.html
+++ b/entreprises-firms-eng.html
@@ -293,7 +293,7 @@
 
 
 					<dt>Website:</dt>
-					<dd><a href="http://www.vicship.com" title="Victoria Shipyard Website">http://www.vicship.com</a> <i>(this
+					<dd><a href="http://www.seaspan.com/vicship/" title="Victoria Shipyard Website">http://www.seaspan.com/vicship/</a> <i>(this
 							site available in English only)</i> </dd>
 
 
