--- a/entreprises-firms-fra.html
+++ b/entreprises-firms-fra.html
@@ -297,7 +297,7 @@
 
 
 					<dt>Site Web&nbsp;:</dt>
-					<dd><a href="http://www.vicship.com" title="Site Web du Victoria Shipyards">http://www.vicship.com</a> <i>(site en anglais seulement)</i> </dd>
+					<dd><a href="http://www.seaspan.com/vicship/" title="Site Web du Victoria Shipyards">http://www.seaspan.com/vicship/</a> <i>(site en anglais seulement)</i> </dd>
 
 
 					<dt>Courriel&nbsp;:</dt>
