--- a/index-eng.html
+++ b/index-eng.html
@@ -102,8 +102,8 @@
 						the largest solid-bottom commercial drydock on the West Coast of the Americas.
 						We are <a href="emp-loc-eng.html">located</a> in an ice free harbour on Vancouver
 						Island near gateways to Alaska and the Pacific Rim. </p>
-					<p>Our world class facilities include <a href="services-eng.html#stabil">stabilizer
-							pockets</a> and <a href="ser/reparation-repair-eng.html">high-speed heavy lift cranes</a> up
+					<p>Our world class facilities include stabilizer
+							pockets and high-speed heavy lift cranes up
 							to 150 tonnes/165 tons. The Dock can accommodate vessels up to 100,000
 							DWT or about 90% of the world's ships.</p>
 					<p>The EGD is <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-eng.cfm">available
@@ -117,8 +117,8 @@
 						- a Canadian federal government department.</p>
 					<p>Ship repair work takes place 24-hours-a-day, seven days a week, 365 days
 						a year. The Dock provides a full range of <a href="ser/reparation-repair-eng.html">ship
-						repair services</a> and amenities like our new <a href="services-eng.html#stabil">stabilizer
-						pockets</a>. </p>
+						repair services</a> and amenities like our new stabilizer
+						pockets. </p>
 				</div>
 				<div class="option2">
 					<h2>What We Do</h2>
