--- a/victoria-fra.html
+++ b/victoria-fra.html
@@ -109,7 +109,7 @@
 
 				<h2><a name="victoria"></a>Information touristique				</h2>
 				<p>Tourism Victoria&nbsp;: <br />
-					<a href="http://www.tourismvictoria.com/france/" title="Tourism Victoria">http://www.tourismvictoria.com/france/</a></p>
+					<a href="http://www.tourismvictoria.com/French/" title="Tourism Victoria">http://www.tourismvictoria.com/French/</a></p>
 				<p><i>(sites disponibles en anglais seulement)</i></p>
 				<p>Victoria Conference Centre&nbsp;: <br />
 					<a href="http://www.victoriaconference.com" title="Victoria Conference Centre">http://www.victoriaconference.com</a></p>
