--- a/env/tarifs-rates-eng.html
+++ b/env/tarifs-rates-eng.html
@@ -92,7 +92,7 @@
 					EGD: Rates
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 				</h1>
-				<p>A  proposal to revise the tariffs for common use services at the Esquimalt Graving  Dock has been under development since 2007. &nbsp;The tariff proposal was developed in consultation with users in  compliance with the <a href="http://laws.justice.gc.ca/en/U-3.7/108118.html">User Fees Act</a>. Clients  were directly involved in the consultations, and proposed changes were  discussed with users in a working group environment and individually. </p>
+				<p>A  proposal to revise the tariffs for common use services at the Esquimalt Graving  Dock has been under development since 2007. &nbsp;The tariff proposal was developed in consultation with users in  compliance with the <a href="http://laws-lois.justice.gc.ca/eng/acts/U-3.7/index.html">User Fees Act</a>. Clients  were directly involved in the consultations, and proposed changes were  discussed with users in a working group environment and individually. </p>
 				<p>The tariff proposal was  reviewed by the House Standing Committee on Government Operations and Estimates  on May 28, 2009 and by the Senate Standing Committee on Transportation and  Communication on June 9, 2009. All of the requirements and provisions of the <em>User  Fees Act </em>have now been met.</p>
 				<p>The department has now implemented the proposed tariff changes effective April 1, 2010.</p>
 				<p>The new rates are consistent with  previous notices given to users in 2007 and in 2008.</p>
