Fix mailto issues

--- a/env/simple-fra.html
+++ b/env/simple-fra.html
@@ -126,7 +126,7 @@
 					
 				<p>" C'est une véritable réussite, indique M. Lawes. Tout le monde est satisfait. Parfois, les solutions les plus simples s'avèrent les meilleures! "</p>
 					
-				<div class="option2"><p>Pour plus de renseignements, communiquez avec Daryl Lawes, spécialiste de l'environnement, Région du Pacifique de TPSGC, au 250-363-6985 ou à <a href="mailto:daryl.lawes@pwgsc.gc.ca">daryl.lawes@tpsgc.gc.ca</a>.</p></div>
+				<div class="option2"><p>Pour plus de renseignements, communiquez avec Daryl Lawes, spécialiste de l'environnement, Région du Pacifique de TPSGC, au 250-363-6985 ou à <a href="mailto:daryl.lawes@pwgsc-tpsgc.gc.ca">daryl.lawes@pwgsc-tpsgc.gc.ca</a>.</p></div>
 			</div>
 
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
