--- a/env/ecocivisme-environment-eng.html
+++ b/env/ecocivisme-environment-eng.html
@@ -108,7 +108,7 @@
 				</div>
 				<p>The Canadian General Standards Board has recently registered the Esquimalt
 					Graving Dock, the largest fixed-foundation civilian dry dock
-					on the West Coast of North America, to <acronym title="International Standards Organization">ISO</acronym> 14001. Located
+					on the West Coast of North America, to <acronym title="International Organization for Standardization">ISO</acronym> 14001. Located
 					in a suburb of Victoria, British Columbia, the dock is owned
 					and operated by Public Works and Government Services Canada
 					(PWGSC), but all the shipbuilding and repairs are done by
