--- a/env/gestion-management-eng.html
+++ b/env/gestion-management-eng.html
@@ -122,7 +122,7 @@
 						including health and safety, spill response, hazardous materials/waste
 						handling, environmental awareness, and other job specific requirements.</p>
 					<p><acronym title="Esquimalt Graving Dock">EGD</acronym> staff must also
-						be knowledgeable of the Environmental Best Management Practices (<acronym title="Environmental Best Management Practices">EBMP</acronym>)
+						be knowledgeable of the Environmental Best Management Practices (<acronym title="Environmental Best Management Practices">EBMPs</acronym>)
 						relating to their work.</p>
           <div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />Top of Page</a> </div>
 				</div>
