--- a/env/gestion-management-fra.html
+++ b/env/gestion-management-fra.html
@@ -91,7 +91,7 @@
 					</h1>
 				<div style="clear:right;">
 					<h2 id="iso"><acronym title="Organisation internationale de normailisation">ISO</acronym> 14001</h2>
-					<p>La certification <acronym title="Organisation internationale de normailisation">IS0</acronym> 14001
+					<p>La certification <acronym title="Organisation internationale de normailisation">ISO</acronym> 14001
 						est un norme internationale concerant l'&eacute;laboration et la mise en &#339;uvre
 						d'un syst&egrave;me de gestion de l'environnement (<acronym title="syst&egrave;me de gestion de l'environnement">SGE</acronym>).
 						Admissible &agrave; cette certification en 2001, la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> a
