--- a/env/initiatives-eng.html
+++ b/env/initiatives-eng.html
@@ -155,7 +155,7 @@
 							disposal of materials such as oil, fuels, abrasive grit, paint, solvent,
 							antifreeze and batteries. To continually improve worker safety and to reduce
 							the risk of impacting the environment, the <acronym title="Esquimalt Graving Dock">EGD</acronym> has
-							included guidelines for hazardous materials/waste management in the <acronym title="Esquimalt Graving Dock">EGD's</acronym> Environmental
+							included guidelines for hazardous materials/waste management in the <acronym title="Esquimalt Graving Dock">EGD</acronym>'s Environmental
 							Best Management Practices Manual. </p>
 						<p>&nbsp;</p>
 						<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
