--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -96,7 +96,7 @@
 				de cet objectif passe obligatoirement par une gestion respectueuse de l'environnement.
 				Afin de garantir que les activit&eacute;s men&eacute;es dans ses installations
 				s'effectuent dans le respect de l'environnement, la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> a
-				mis en &#339;uvre un syst&egrave;me de gestion de l'environnement (<acronym title="syst&egrave;me de gestion de l'environnement">SEG</acronym>)
+				mis en &#339;uvre un syst&egrave;me de gestion de l'environnement (<acronym title="syst&egrave;me de gestion de l'environnement">SGE</acronym>)
 				qui a &eacute;t&eacute; certifi&eacute; conforme &agrave; la norme internationale <acronym title="Organisation internationale de normailisation">ISO</acronym> 14001
 				concerant les <acronym title="syst&egrave;me de gestion de l'environnement">SGE</acronym>.</p>
 			<p>Depuis sa certification en 2001, ce syst&egrave;me de gestion de l'environnement
