--- a/env/voie-way-eng.html
+++ b/env/voie-way-eng.html
@@ -73,7 +73,7 @@
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
 			&gt;&nbsp;<a href="interet-interest-eng.html">Articles
-			of Interest</a>			&gt; Leading the Way with <acronym title="International Standards Organization">ISO</acronym> 14001 </p>
+			of Interest</a>			&gt; Leading the Way with <acronym title="International Organization for Standardization">ISO</acronym> 14001 </p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- TWO COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE DE DEUX COLONNES -->
