--- a/his/ensemble-eng.html
+++ b/his/ensemble-eng.html
@@ -93,7 +93,7 @@
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
 					History<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<h2>Ensemble Article <em></em></h2>
+				<h2>Ensemble Article</h2>
 				<p><em>What Happens Once Every 75 Years?</em><br />
 				Leah Prentice</p>
 				<div style="clear:right;"> <img src="../images/ensemble/1.jpg" width="113" height="150" alt="Canada Day Open House" style="float:right; padding-left:10px; padding-bottom:10px; padding-bottom:10px;"/>
