--- a/his/ensemble-fra.html
+++ b/his/ensemble-fra.html
@@ -94,7 +94,7 @@
 					Leah Prentice</p>
 				<div style="clear:right;"> <img src="../images/ensemble/1.jpg" width="113" height="150" alt="Journ&eacute;e d'accueil lors de la F&ecirc;te du Canada" style="float:right; padding-left:10px; padding-bottom:10px; padding-bottom:10px;"/>
 					<p>L'an dernier, la Cale s&egrave;che d'Esquimalt a c&eacute;l&eacute;br&eacute;
-						son 75<sup>e</sup> anniversaire d'existence. La <acronym title="Cale s&eacute;che d'Esquimalt">CSE</acronym> a
+						son 75<sup>e</sup> anniversaire d'existence. La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> a
 						profit&eacute;
 						de la F&ecirc;te du Canada pour tenir la premi&egrave;re journ&eacute;e
 						d'accueil de son histoire, et des dizaines d'employ&eacute;s de <acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym> ont
