--- a/historique-history-fra.html
+++ b/historique-history-fra.html
@@ -106,7 +106,7 @@
 					la cale, qui &eacute;tait la deuxi&egrave;me en importance au monde.</p>
 				<p> La cale s&egrave;che d'Esquimalt a &eacute;t&eacute; inaugur&eacute;e
 					le 1<sup>er</sup>&nbsp;juillet&nbsp;1927, dans le cadre des c&eacute;l&eacute;brations
-					du Jubil&eacute;e de diamant. Cette ann&eacute;e, la <acronym title="Cale s&eacute;che d'Esquimalt">CSE</acronym> c&eacute;l&egrave;bre
+					du Jubil&eacute;e de diamant. Cette ann&eacute;e, la <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> c&eacute;l&egrave;bre
 					son 75<sup>e</sup> anniversaire avec une c&eacute;r&eacute;monie comm&eacute;morative &agrave; laquelle
 					assisteront l'Honorable David Anderson, ministre de l'Environnement et Son
 					Honneur le maire d'Esquimalt, Ray Rice.</p>
