--- a/services-fra.html
+++ b/services-fra.html
@@ -90,8 +90,8 @@
 					</h1>
 				<p>La Cale s&egrave;che d'Esquimalt est une entreprise dynamique de r&eacute;paration
 					navale desservant une client&egrave;le nationale et internationale et fonctionnant
-					24 heures sur 24, 7 jours sur 7 et 365 jours par ann&eacute;e. La <acronym title="Cale s&eacute;che d'Esquimalt">CSE</acronym> offre
-					une gamme compl&egrave;te de <a href="ser/reparation-repair-fra.html">services</a> et
+					24 heures sur 24, 7 jours sur 7 et 365 jours par ann&eacute;e. La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> offre
+					une gamme compl&egrave;te de services et
 					d'&eacute;quipements de r&eacute;paration navale, notamment de nouveaux
 					logements de stabilisateurs.</p>
 				<p>Les paquebots de croisi&egrave;re sont &eacute;quip&eacute;s de stabilisateurs
