--- a/site-fra.html
+++ b/site-fra.html
@@ -89,7 +89,7 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<ul>
-					<li> <a href="index-fra.html">Accueil <acronym title="Cale s&eacute;che d'Esquimalt">CSE</acronym></a></li>
+					<li> <a href="index-fra.html">Accueil <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></li>
 					<li> <a href="emp-loc-fra.html">Emplacement</a></li>
 					<li> <a href="services-fra.html">Services</a>
 
