--- a/index-fra.html
+++ b/index-fra.html
@@ -107,7 +107,7 @@
 						de levage haute vitesse pour charges lourdes (capacit&eacute; de 150-165
 						tonnes). La cale s&egrave;che peut recevoir des navires de 100&nbsp;000
 						TPL, soit environ 90&nbsp;% des navires du monde.</p>
-					<p>La <acronym title="Cale s&eacute;che d'Esquimalt">CSE</acronym> <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-fra.cfm">offre
+					<p>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-fra.cfm">offre
 							des services de r&eacute;paration et d'entretien naval aux entreprises
 							commerciales et aux particuliers</a>, sur commande (premier arriv&eacute;,
 							premier servi). Tout le travail est assur&eacute; par des <a href="entreprises-firms-fra.html">entreprises
