--- a/rendement-performance-fra.html
+++ b/rendement-performance-fra.html
@@ -94,20 +94,20 @@
 					to Jim Milne, at <a href="mailto:jim.milne@tpsgc.gc.ca">Jim.Milne@tpsgc.gc.ca</a></p>
 				<hr /> -->
 				<p>&Agrave; la cale s&egrave;che d'Esquimalt (CSE), Travaux publics et Services
-					gouvernements Canada (TPSGC) fournira de fa&ccedil;on raisonnable :</p>
+					gouvernementaux Canada (TPSGC) fournira de fa&ccedil;on raisonnable :</p>
 				<ul>
 					<li>es services d'administration, pour les besoins de la r&eacute;servation
 						de services ou d'espace pour bateaux;</li>
 					<li>des pr&eacute;avis de 48 heures sur les changements de service ou d'utilisation
-						de l'espace qui pourraient influer sur le bon fonctionnement et la s&eacute;curit&eacute; de
+						de l'espace qui pourraient influer sur le bon fonctionnement et la s&egrave;curit&eacute; de
 						l'installation; </li>
-					<li>un plan d'intervention d'urgence pour la <acronym title="Cale s&eacute;che d'Esquimalt">CSE</acronym>;
+					<li>un plan d'intervention d'urgence pour la <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym>;
 						et</li>
 					<li>un plan approuv&eacute; de s&eacute;curit&eacute; des installations
 						maritimes ainsi que les services d'un Agent de s&ucirc;ret&eacute; de l'installation
 						maritime qualifi&eacute;</li>
 				</ul>
-				<p><acronym title="Travaux publics et Services gouvernements Canada">TPSGC</acronym> fera rapport tous les ans sur la mesure des services.</p>
+				<p><acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym> fera rapport tous les ans sur la mesure des services.</p>
 				<ul>
 					<li>Les r&eacute;servations et les confirmations de r&eacute;servations
 						doivent &ecirc;tre effectu&eacute;es de fa&ccedil;on raisonnable sur demande.</li>
@@ -136,7 +136,7 @@
 
 					<dt>Troisi&egrave;me recours&nbsp;:</dt>
 					<dd>Sous ministre adjoint - Immobilier<br />
-						Sous ministre adjoint - <acronym title="Travaux publics et Services gouvernements Canada">TPSGC</acronym></dd>
+						Sous ministre adjoint - <acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym></dd>
 
 				</dl>
 				<p><strong>Avis: Cet document sera mis &agrave; jour annuellement.</strong></p>
