Fix content errors

--- a/env/projects-projets-fra.html
+++ b/env/projects-projets-fra.html
@@ -14,7 +14,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
-<meta name="dc.title" content="un chef de file en voie vers la certification ISO 14001 - CSE - TPSGC" />
+<meta name="dc.title" content="CSE: tarifs" />
 <meta name="dc.subject" scheme="gccore" content="Navire; Quai; Environnement; Information;  Index" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="fra" />
