Remove links to victoria page

--- a/emp-loc-fra.html
+++ b/emp-loc-fra.html
@@ -89,9 +89,9 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<p>La Cale s&egrave;che d'Esquimalt est situ&eacute;e &agrave; Esquimalt,
-					au 825 Admirals Road &ndash; &agrave; 15 minutes au nord de <a href="victoria-fra.html">Victoria</a>, &agrave; l'extr&eacute;mit&eacute; sud
+					au 825 Admirals Road &ndash; &agrave; 15 minutes au nord de Victoria, &agrave; l'extr&eacute;mit&eacute; sud
 					de l'île de Vancouver. </p>
-				<p><a href="victoria-fra.html">Victoria</a> est situ&eacute;e &agrave; proximit&eacute; des
+				<p>Victoria est situ&eacute;e &agrave; proximit&eacute; des
 					villes portuaires de Vancouver (Colombie-Britannique) et de Seattle (Washington),
 					et &agrave; environ 1&nbsp;200 km (600 milles) de San Francisco. </p>
 				<p>Ce port &laquo;&nbsp;toutes saisons&nbsp;&raquo; procure un acc&egrave;s
