--- a/emp-loc-eng.html
+++ b/emp-loc-eng.html
@@ -93,9 +93,9 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<p>The Esquimalt Graving Dock is located in Esquimalt at 825 Admirals Road
-					&ndash; 15 minutes north of <a href="victoria-eng.html">Victoria</a> on the southern
+					&ndash; 15 minutes north of Victoria on the southern
 					tip of Vancouver Island.</p>
-				<p><a href="victoria-eng.html">Victoria</a> is close to the port cities of
+				<p>Victoria is close to the port cities of
 					Vancouver, British Columbia and Seattle, Washington. It's also about 1,200
 					km, or 600 miles, north of San Francisco, California.</p>
 				<p>The ice free harbour is strategically located near gateways to Alaska
